# fairness-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks-alt.yaml  tasks.yaml
src/fairness_benchmark/: main.py
src/fairness_benchmark/benchmark/: benchmark_dataset.py  models.py  plotting.py  run_dataset.py  utils.py
src/fairness_benchmark/data/dataset/example/: download_dataset.sh
src/fairness_benchmark/data/metric/: README.md
src/fairness_benchmark/data/plots/: README.md
src/fairness_benchmark/data/processed_dataset/: README.md
src/fairness_benchmark/process/: aif360_loading.py  custom_dataset.py  load_dataset.py  metrics.py  preprocessing.py  process_dataset.py
src/fairness_benchmark/utils/: loading.py  read_yaml.py  temp.py
